Add verkle access witness stats in EVM to tracing
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>